<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgRecipe"
                    android:layout_width="90dp"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/food" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/food_name"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ava_Ing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/aval_ing" />

                    <TextView
                        android:id="@+id/missIng"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/miss_ing"
                        android:textColor="#4D8AF0" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/miss_item"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/miss"
                android:textColor="#FF0000" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>