<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/notyet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/not_plan_ye"
        android:text="@string/notyet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="MissingConstraints" />




    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:text="@string/food"
        android:textAppearance="@style/food"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imgprofile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/pubg" />

    <Button
        android:id="@+id/AskPer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/scan"
        android:textAppearance="@style/scan_ingred"
        android:textStyle="bold"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/receipe"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/box2"
        android:gravity="center"
        android:text="@string/receipe"
        android:textAppearance="@style/scan_ingred"
        android:textStyle="bold"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AskPer"
        app:layout_constraintVertical_bias="0.214" />



</androidx.constraintlayout.widget.ConstraintLayout>